force-app/main/default/objects/tc9_pr__Batch_Logs__c/tc9_pr__Batch_Logs__c.object-meta.xml
<CustomObject>
    <label>Batch Log</label>
    <nameField>
        <displayFormat>Batch_Log-{00000}</displayFormat>
        <label>Batch Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>