force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Apex_Job_Id__c</fullName>
    <description>The Salesforce Id of the Apex Job.</description>
    <inlineHelpText>The Salesforce Id of the Apex Job.</inlineHelpText>
    <label>Apex Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>