force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Batch_Type__c</fullName>
    <description>The apex method used to initiate this Apex Job.</description>
    <inlineHelpText>The apex method used to initiate this Apex Job.</inlineHelpText>
    <label>Batch Type</label>
    <type>TextArea</type>
</CustomField>