force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Batch_Variables__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Batch_Variables__c</fullName>
    <description>User-entered variables specific to this Apex Job.</description>
    <inlineHelpText>User-entered variables specific to this Apex Job.</inlineHelpText>
    <label>Batch Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>