force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Chained_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Chained_Job_Id__c</fullName>
    <description>This is the Apex Job Id of the chained Apex Job.</description>
    <inlineHelpText>This is the Apex Job Id of the chained Apex Job.</inlineHelpText>
    <label>Chained Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>