force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Chained_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Chained_Process_Name__c</fullName>
    <description>This is the class name of the Apex Job chained to the source process.</description>
    <inlineHelpText>This is the class name of the Apex Job chained to the source process.</inlineHelpText>
    <label>Chained Process Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>