force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked this record will be skipped by the scheduled job which regularly deletes batch logs that are no longer required</description>
    <inlineHelpText>When ticked this record will be skipped by the scheduled job which regularly deletes batch logs that are no longer required.</inlineHelpText>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>