force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Event__c</fullName>
    <description>The event type that initiated this Apex Job.</description>
    <inlineHelpText>The event type that initiated this Apex Job.</inlineHelpText>
    <label>Event</label>
    <length>20</length>
    <type>Text</type>
</CustomField>