force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Process_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Process_Name__c</fullName>
    <description>The process that created the batch log.</description>
    <inlineHelpText>The process that created the batch log.</inlineHelpText>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>