force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Record_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Record_ID__c</fullName>
    <description>The initiating record that started this Apex Job.</description>
    <inlineHelpText>The initiating record that started this Apex Job.</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>