force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Start_DateTime__c</fullName>
    <description>The date and time when the Apex Job started running.</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>The date and time when the Apex Job started running.</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>