force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The status of the Apex Job.</description>
    <inlineHelpText>The status of the Apex Job.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>