force-app/main/default/objects/tc9_pr__Batch_Logs__c/fields/tc9_pr__Total_Batches_Failed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Batches_Failed__c</fullName>
    <description>The total number of batches that failed during the execution of the Apex Job.</description>
    <inlineHelpText>The total number of batches that failed during the execution of the Apex Job.</inlineHelpText>
    <label>Total Batches Failed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>