force-app/main/default/objects/tc9_pr__Batch_Logs__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Batch_Type__c</columns>
    <columns>tc9_pr__Event__c</columns>
    <columns>tc9_pr__Process_Name__c</columns>
    <columns>tc9_pr__Start_DateTime__c</columns>
    <columns>tc9_pr__Total_Batches__c</columns>
    <columns>tc9_pr__Total_Batches_Failed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>